@@ -26,6 +26,7 @@
 #endif
 
 /* Get the definition of `FNM_CASEFOLD'.  FIXME */
+/* XXX Why do we need to know what the value of the FNM_CASEFOLD macro is? */
 #define _POSIX_SOURCE
 
 #include <unistd.h>
